test_suite/tests/ui/enum-representation/untagged-and-adjacent.stderr
error: untagged enum cannot have #[serde(tag = "...", content = "...")]
 --> tests/ui/enum-representation/untagged-and-adjacent.rs:4:9
  |
4 | #[serde(untagged)]
  |         ^^^^^^^^

error: untagged enum cannot have #[serde(tag = "...", content = "...")]
 --> tests/ui/enum-representation/untagged-and-adjacent.rs:5:9
  |
5 | #[serde(tag = "t", content = "c")]
  |         ^^^

error: untagged enum cannot have #[serde(tag = "...", content = "...")]
 --> tests/ui/enum-representation/untagged-and-adjacent.rs:5:20
  |
5 | #[serde(tag = "t", content = "c")]
  |                    ^^^^^^^
